# aegis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
aegis/: cli.py  predictor.py
data/: __init__.py  collect_human_code.py  collect_llm_code.py  preprocess.py  prompts.py
model/: __init__.py  baseline.py  dataset.py  eval.py  train.py  weight_analysis.py
model/results/: model_results.json
tests/: __init__.py  test.py  test_basic.py  test_data.py
